@@ -1,28 +1,50 @@
 package it.gov.pagopa.pu.bff.mapper;
 
+import com.fasterxml.jackson.databind.json.JsonMapper;
+import it.gov.pagopa.pu.bff.dto.UpstreamErrorDTO;
 import it.gov.pagopa.pu.bff.util.ErrorMessageParser;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.stereotype.Component;
+import org.springframework.web.client.HttpClientErrorException;
 
-public final class UpstreamErrorMapper {
-  private UpstreamErrorMapper() {}
+@Component
+public class UpstreamErrorMapper {
 
-  public record MappedUpstreamError(String code, String description) {}
+  private final JsonMapper jsonMapper;
 
-  public static MappedUpstreamError map(String maybeMessage, String fallbackMessage) {
-    String upstreamMessage = chooseMessage(maybeMessage, fallbackMessage);
+  public UpstreamErrorMapper(JsonMapper jsonMapper) {
+    this.jsonMapper = jsonMapper;
+  }
 
-    ErrorMessageParser.ParsedError parsed =
-      ErrorMessageParser.parse(upstreamMessage);
+  public record MappedUpstreamError(String code, String description) {
+  }
 
-    String description =
-      parsed.description() != null ? parsed.description() : upstreamMessage;
+  public MappedUpstreamError from(HttpClientErrorException ex) {
+    UpstreamErrorDTO upstream = tryParse(ex);
+
+    String fallbackMessage = ex.getMessage();
+    String upstreamMessage = upstream != null ? upstream.getMessage() : null;
+
+    String resolvedMessage = StringUtils.firstNonBlank(upstreamMessage, fallbackMessage);
+
+    ErrorMessageParser.ParsedError parsed = ErrorMessageParser.parse(resolvedMessage);
+
+    String description = StringUtils.firstNonBlank(parsed.description(), resolvedMessage);
 
     return new MappedUpstreamError(parsed.code(), description);
   }
 
-  private static String chooseMessage(String maybeMessage, String fallback) {
-    return (maybeMessage != null && !maybeMessage.isBlank())
-      ? maybeMessage
-      : fallback;
+  private UpstreamErrorDTO tryParse(HttpClientErrorException ex) {
+    try {
+      String body = ex.getResponseBodyAsString();
+      if (StringUtils.isBlank(body)) {
+        return null;
+      }
+      return jsonMapper.readValue(body, UpstreamErrorDTO.class);
+    } catch (Exception e) {
+      return null;
+    }
   }
 }
+
 
